# msk_flink_pinot

./: .gitignore  README.md
flights/: README.md  flight_data_20250821_132127.avro  flight_data_20250821_132127.json  get_flights.py  requirements.txt
msk_admin/: Dockerfile  Makefile  README.md  deploy-ec2.sh  pyproject.toml
msk_admin/schemas/: flight_weather.avsc
msk_admin/src/msk_admin/: __init__.py  bootstrap.py  cli.py  config.py  iam_oauth.py  kafka_admin.py  schema_registry.py  topic_profiles.py
msk_admin/src/msk_admin.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
msk_admin/tests/: __init__.py
terraform/: check_nodes.sh  debug_eks_nodes.sh  main.tf  outputs.tf  providers.tf  scale_nodes.sh  variables.tf
terraform/envs/dev/: README.md  main.tf  variables.tf
terraform/envs/poc/: README.md  main.tf  variables.tf
terraform/envs/prod/: main.tf  variables.tf
terraform/envs/staging/: main.tf  variables.tf
terraform/modules/bastion/: iam.tf  main.tf  outputs.tf  user_data.sh  variables.tf
terraform/modules/eks-cluster/: main.tf  outputs.tf  variables.tf  versions.tf
terraform/modules/flink/: iam.tf  kubernetes.tf  main.tf  outputs.tf  security.tf  variables.tf  versions.tf
terraform/modules/kafka/: main.tf  outputs.tf  security.tf  variables.tf
terraform/modules/pinot/: main.tf  outputs.tf  variables.tf  versions.tf
terraform/scripts/: apply.sh  cleanup-dev.sh  cleanup-poc.sh  deploy-5h-poc.sh  deploy-dev.sh  init.sh  plan.sh  validate-dev.sh  validate-poc.sh
weather/: get_current_weather.py  requirements.txt  weather_data_20250821_132736.avro  weather_data_20250821_132736.json
